feat/config pom.xml